<resources>
    <string name="app_name">KotlinFreeToPlay</string>
    <string name="title_home">Home</string>
    <string name="title_detail">Detail</string>
    <string name="desc_detail">Call of Duty: Warzone is both a standalone free-to-play battle royale and modes accessible via Call of Duty: Modern Warfare. Warzone features two modes — the general 150-player battle royle, and “Plunder”. The latter mode is described as a “race to deposit the most Cash”. In both modes players can both earn and loot cash to be used when purchasing in-match equipment, field upgrades, and more. Both cash and XP are earned in a variety of ways, including completing contracts.\r\n\r\nAn interesting feature of the game is one that allows players who have been killed in a match to rejoin it by winning a 1v1 match against other felled players in the Gulag.\r\n\r\nOf course, being a battle royale, the game does offer a battle pass. The pass offers players new weapons, playable characters, Call of Duty points, blueprints, and more. Players can also earn plenty of new items by completing objectives offered with the pass.</string>
    <string-array name="gameCategories">
        <item>Mmorpg</item>
        <item>Shooter</item>
        <item>Moba</item>
        <item>Anime</item>
        <item>Battle Royale</item>
        <item>Strategy</item>
        <item>Fantasy</item>
        <item>Sci-Fi</item>
        <item>Card Games</item>
        <item>Racing</item>
        <item>Fighting</item>
        <item>Social</item>
        <item>Sports</item>
    </string-array>
    <string name="category_desc">
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
        lorem ipsum dolor sit amet
    </string>
    <string name="mmorpg">MMORPG</string>
    <string name="shooter">Shooter</string>
    <string name="moba">MOBA</string>
    <string name="anime">Anime</string>
    <string name="battle_royale">Battle-Royale</string>
    <string name="strategy">Strategy</string>
    <string name="fantasy">Fantasy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="card_games">Card-Games</string>
    <string name="racing">Racing</string>
    <string name="fighting">Fighting</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="screenshots">Screenshots</string>
    <string name="system_requirements">System Requirements</string>
    <string name="os">OS:</string>
    <string name="cpu">CPU:</string>
    <string name="ram">RAM:</string>
    <string name="storage">Storage:</string>
    <string name="about">About</string>
    <string name="graphic">Graphic:</string>
</resources>